# lets-throw-darts

./: LICENSE  README.md  pyproject.toml
lets_throw_darts/: checkouts.py  coord_converter.py  dartboard.py  player.py  plot_dartboard.py  score.py  segment_centres.py
lets_throw_darts/tools/: average_score.py
tests/: test_coord_converter.py  test_get_score.py
