[tool.poetry]
name = "lets-throw-darts"
version = "0.1.0"
description = "A virtual dartboard"
authors = ["fred cook <fred@fredcook.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lets_throw_darts"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
gymnasium = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
